--- a/4week/afternoon-assignments/apis/swapi/index.html
+++ b/4week/afternoon-assignments/apis/swapi/index.html
@@ -13,6 +13,6 @@
 
 
     <script src="./main.js"></script>
-    <script src='./node_modules/axios/dist/axios.min.js'></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </body>
 </html>
