--- a/6week/afternoon-assignments/deployment/index.html
+++ b/6week/afternoon-assignments/deployment/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <h1>Dad Joke Generator</h1>
-        <img src=""/>
+        <h1>Dad Jokes Generator</h1>
+        <img src="https://cdn.shopify.com/s/files/1/1692/2311/articles/dadjokes-blog-1440x960_1024x1024.png?v=1529027106"/>
     </header>
 </body>
 </html>
